# lax

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
assets/: image.cpp  image.h  model.cpp  model.h  stb_impl.cpp
assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile.sh  grid.frag  grid.frag.spv  grid.vert.spv  metal_library.metal  plane.frag  plane.frag.spv  plane.vert  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
basic/: main.cpp
basic/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  compile.sh  metal_library.metal
editor/: editor.cpp  editor.h  log.cpp  log.h  main.cpp  object.cpp  object.h  scene.cpp  scene.h  settings.h  ui.cpp  ui.h
model/: model.cpp  model.h
platform/: input.cpp  input.h  window.cpp  window.h
renderer/: editor.cpp  editor.h  log.cpp  log.h  object.cpp  object.h  render_graph.cpp  render_graph.h  sandbox.cpp  sandbox.h  scene.cpp  scene.h  window.cpp  window.h
renderer/metal/: context.cpp  context.h  wsi.h  wsi.mm
renderer/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  context.cpp  context.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  device_memory.cpp  device_memory.h  fence.cpp  fence.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  resource_allocator.cpp  resource_allocator.h  semaphore.cpp  semaphore.h  shader.cpp  shader.h  util.h  wsi.cpp  wsi.h
utils/: log.cpp  log.h  type.h  util.cpp  util.h
